<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55ffffff" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imageview_info"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/info"
                    android:padding="5dp"
                    android:background="@drawable/bg_alpha_button"/>

                <ImageView
                    android:id="@+id/imageview_notifications"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/bell"
                    android:padding="5dp"
                    android:background="@drawable/bg_alpha_button"/>

                <ImageView
                    android:id="@+id/imageview_debug"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/debug"
                    android:padding="5dp"
                    android:background="@drawable/bg_alpha_button"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:paddingTop="20dp"
                    android:src="@drawable/app_icon" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_places_near_you"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_menu_button"
                android:text="@string/places_around_you"
                android:textColor="#fff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_explore"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_menu_button"
                android:text="@string/explore"
                android:textColor="#fff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_new_places"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_menu_button"
                android:text="@string/new_places"
                android:textColor="#fff"
                android:textSize="20dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_marginBottom="20dp">

                <TableRow
                    android:layout_width="0dp">

                <Button
                    android:id="@+id/button_visited"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:text="@string/visited_places"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_wished"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:text="@string/places_to_visit"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:text="@string/favorite_places"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                </TableRow>

            </TableLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_menu_social">

                <ImageView
                    android:id="@+id/imageview_web"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/web" />

                <ImageView
                    android:id="@+id/imageview_facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/imageview_instagram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/instagram" />

                <ImageView
                    android:id="@+id/imageview_twitter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/twitter" />

            </LinearLayout>

                <TextView
                    android:id="@+id/textview_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
